<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <fr.insensa.photoepsi.ui.RecyclingImageView
            android:id="@+id/imageView"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/imageview_description"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelTitrePhoto"
                android:text="@string/titrePhoto"
                android:labelFor="@string/titrePhoto"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titrePhoto"
                android:layout_toEndOf="@id/labelTitrePhoto"
                android:layout_toRightOf="@id/labelTitrePhoto"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientationPhoto"
                android:labelFor="@string/orientationPhoto"
                android:id="@+id/labelOrientationPhoto"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/orientationPhoto"
                android:layout_toEndOf="@id/labelOrientationPhoto"
                android:layout_toRightOf="@id/labelOrientationPhoto"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitudePhoto"
                android:labelFor="@string/latitudePhoto"
                android:id="@+id/labelLatitudePhoto"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/latitudePhoto"
                android:layout_toEndOf="@id/labelLatitudePhoto"
                android:layout_toRightOf="@id/labelLatitudePhoto"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitudePhoto"
                android:labelFor="@string/longitudePhoto"
                android:id="@+id/labelLongitudePhoto"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/longitudePhoto"
                android:layout_toEndOf="@id/labelLongitudePhoto"
                android:layout_toRightOf="@id/labelLongitudePhoto"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/commentPhoto"
            android:labelFor="@string/commentPhoto"
            android:id="@+id/labelCommentPhoto"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/commentPhoto"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authorPhoto"
                android:labelFor="@string/authorPhoto"
                android:id="@+id/labelAuthorPhoto"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/authorPhoto"
                android:layout_toEndOf="@id/labelAuthorPhoto"
                android:layout_toRightOf="@id/labelAuthorPhoto"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datePhoto"
                android:labelFor="@string/datePhoto"
                android:id="@+id/labelDatePhoto"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/datePhoto"
                android:layout_toEndOf="@id/labelDatePhoto"
                android:layout_toRightOf="@id/labelDatePhoto"/>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>
